[tool.poetry]
name = "url-rag"
version = "0.1.0"
description = ""
authors = ["Anwesh43 <anweshthecool0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
llama-index = "^0.14.5"
llama-index-core = "^0.14.5"
pydantic = "^2.12.3"
playwright = "^1.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
